[gd_scene load_steps=6 format=3 uid="uid://buayxkknse3sa"]

[ext_resource type="Script" uid="uid://dwfkdwfrljhyk" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Shader" uid="uid://30rnuu2jce0h" path="res://player.gdshader" id="2_onrkg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i3pqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4flbx"]
shader = ExtResource("2_onrkg")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
shape = SubResource("CapsuleShape3D_onrkg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_i3pqv")

[node name="Head" type="Node3D" parent="."]

[node name="PlayerView" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5584569, 0)
current = true

[node name="RayCast3D" type="RayCast3D" parent="Head/PlayerView"]
target_position = Vector3(0, 0, -5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Cel_H" type="ColorRect" parent="CanvasLayer/Control"]
material = SubResource("ShaderMaterial_4flbx")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -10.0
offset_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Cel_V" type="ColorRect" parent="CanvasLayer/Control"]
material = SubResource("ShaderMaterial_4flbx")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -1.0
offset_right = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Hotbar" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Slot" type="Panel" parent="CanvasLayer/Hotbar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2

[node name="Preview" type="ColorRect" parent="CanvasLayer/Hotbar/Slot"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Count" type="Label" parent="CanvasLayer/Hotbar/Slot/Preview"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="Slot2" type="Panel" parent="CanvasLayer/Hotbar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2

[node name="Preview" type="ColorRect" parent="CanvasLayer/Hotbar/Slot2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Count" type="Label" parent="CanvasLayer/Hotbar/Slot2/Preview"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="Slot3" type="Panel" parent="CanvasLayer/Hotbar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2

[node name="Preview" type="ColorRect" parent="CanvasLayer/Hotbar/Slot3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Count" type="Label" parent="CanvasLayer/Hotbar/Slot3/Preview"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="Slot4" type="Panel" parent="CanvasLayer/Hotbar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2

[node name="Preview" type="ColorRect" parent="CanvasLayer/Hotbar/Slot4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Count" type="Label" parent="CanvasLayer/Hotbar/Slot4/Preview"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="Slot5" type="Panel" parent="CanvasLayer/Hotbar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2

[node name="Preview" type="ColorRect" parent="CanvasLayer/Hotbar/Slot5"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Count" type="Label" parent="CanvasLayer/Hotbar/Slot5/Preview"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="SelectionFrame" type="ReferenceRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(60, 60)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
border_color = Color(1, 1, 1, 1)

[node name="BlockNameLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -85.76001
offset_right = 20.0
offset_bottom = -62.76001
grow_horizontal = 2
grow_vertical = 0
